fix: Horizontally align play button in classic skin

--- a/assets/src/css/classic-skin.scss
+++ b/assets/src/css/classic-skin.scss
@@ -8,6 +8,7 @@
 		color: #1c1b1b !important;
 		height: 60px !important;
 		width: 60px !important;
+		left: 53% !important;
 
 		span::before {
 			font-size: 38px !important;
